# subcast

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: spawn-agent.md
.github/workflows/: ci.yml
commands/: list-agents.md  prune-agent.md  spawn-agent.md  subagent-design-guide.md
docs/: ARCHITECTURE.md  DEMO.md  PERMISSION_MODEL.md
src/cli/: __init__.py  spawn_agent.py
src/subcast/: __init__.py  approval.py  designer.py  handoff.py  manifest.py  matcher.py  permission_reader.py  specs.py  writer.py
tests/: test_approval.py  test_designer.py  test_handoff.py  test_manifest.py  test_matcher.py  test_permission_reader.py  test_smoke.py  test_spawn_agent.py  test_specs.py  test_writer.py
tests/fixtures/: fake_mcp_server.py  settings_conflicting.json  settings_full.json
tests/fixtures/sample_agents/: doc-writer.md  malformed.md
